--- a/v1/Ch1/1_2/1_2_2.md
+++ b/v1/Ch1/1_2/1_2_2.md
@@ -1,3 +1,7 @@
 
 3: What is $(-3)^{-3}$
-$(-3)^(-3)= \frac {1}{(-3)^3} =- \frac {1}{27}$
+
+Ans:
+
+
+$(-3)^{-3} = \frac {1}{(-3)^3} =- \frac {1}{27}$
