--- a/v1/Ch1/1_2/1_2_4/1.2.4.md
+++ b/v1/Ch1/1_2/1_2_4/1.2.4.md
@@ -1,7 +1,8 @@
-1. What are $\floor{1.1}$, $\floor{-1.1}$, $\floor{0.99999}$ and $\floor{ \lg 35}$
+1. What are $ \lfloor 1.1 \rfloor $, $\lfloor -1.1 \rfloor$,
+ $\lfloor 0.99999 \rfloor $ and $\lfloor  \lg 35 \rfloor$
 
 Ans:
-$\floor{1.1} = 1$
-$\floor{-1.1} = -2 $
-$\floor{0.99999} = 0 $
-$\floor{ \lg 35}= \lg 32 = \lg 2^5 =5$
+$\lfloor 1.1 \rfloor = 1$
+$\lfloor -1.1  \rfloor = -2 $
+$\lfloor 0.99999 \rfloor = 0 $
+$\lfloor \lg 35}= \lg 32 = \lg 2^5 =5$
