--- a/v3/3.3/3.3.1/Exercise.ipynb
+++ b/v3/3.3/3.3.1/Exercise.ipynb
@@ -14,12 +14,34 @@
    "cell_type": "markdown",
    "id": "dc061ebf",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. if two dice are \"loade\" so that, on one die, the values 1 will turn up exactly twice as often as any of the other values, and the other die is similarly biased towards 6, compute the probality $p_s$ that a total of exactly $s$ will appear on the two dice, for $2 \\le s \\le 12$. "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e4b8b048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = [0]*13\n",
+    "total=0\n",
+    "for i in range(1,7):\n",
+    "    p1 = 2 if i==1 else 1\n",
+    "    for j in range(1,7):\n",
+    "        p2 = 2 if j == 6 else 1\n",
+    "        s = i + j\n",
+    "        sum[s]=sum[s]+(p1*p2)\n",
+    "        total += p1*p2\n",
+    "p = [f\"{s}/{total}\" for s in sum]\n",
+    "print(p[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d47d59",
    "metadata": {},
    "outputs": [],
    "source": []
