--- a/v3/3.3/3.3.1/Exercise.ipynb
+++ b/v3/3.3/3.3.1/Exercise.ipynb
@@ -20,10 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e4b8b048",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2/49', '3/49', '4/49', '5/49', '6/49', '9/49', '6/49', '5/49', '4/49', '3/49', '2/49']\n"
+     ]
+    }
+   ],
    "source": [
     "sum = [0]*13\n",
     "total=0\n",
@@ -39,9 +47,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2ddb2d6",
+   "metadata": {},
+   "source": [
+    "3. Some dice that were loaded as described in the previous exervise were rolled 144 times, and the following values were observered:\n",
+    "\n",
+    "    | value of $s$ |2|3|4|5|6|7|8|9|10|11|12| \n",
+    "    |--------------|-|-|-|-|-|-|-|-|--|-|--| \n",
+    "    |observed number, $Y_s$ |2|6|10|16|18|32|20|13|16|9|2|\n",
+    "    \n",
+    "Apply the chi-square test to *these* values, using the probablities in (1), presenting that the dice are not in fact known to be faulty. Does the chi-square test detect the bad dice? If not, explain why not.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9f9addfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.027777777777777776, 0.05555555555555555, 0.08333333333333333, 0.1111111111111111, 0.1388888888888889, 0.16666666666666666, 0.1388888888888889, 0.1111111111111111, 0.08333333333333333, 0.05555555555555555, 0.027777777777777776]\n",
+      "V = 7.720833333333331\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_exp = [2,6,10,16,18,32,20,13,16,9,2]\n",
+    "ps = [i/36 if i<=6 else (12-i)/36 for i in range(1,12)]\n",
+    "print(ps)\n",
+    "v = 0\n",
+    "n = 0\n",
+    "for i in range(0,11):\n",
+    "    n += y_exp[i]\n",
+    "    v += y_exp[i]*y_exp[i]/ps[i]\n",
+    "v = v/n -n\n",
+    "print(f\"V = {v}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d1ecee5",
+   "metadata": {},
+   "source": [
+    "from table 1, row v=10 this $V$ value is between $p=25\\%$ and $p=50\\%$ which is not in reject zone "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d47d59",
+   "id": "18827b82",
    "metadata": {},
    "outputs": [],
    "source": []
