--- a/v1/Ch1/1_2/1_2_2/Exercise.ipynb
+++ b/v1/Ch1/1_2/1_2_2/Exercise.ipynb
@@ -2,45 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28624717",
+   "id": "5072fff9-3e9d-4949-b88a-593d75290956",
    "metadata": {},
    "source": [
-    "4. What is the greatest common divisor of 2166 and 6099"
+    "3: What is $(-3)^{-3}$\n",
+    "\n",
+    "Ans:\n",
+    "\n",
+    "\n",
+    "$(-3)^{-3} = \\frac {1}{(-3)^3} =- \\frac {1}{27}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adbc341d-23d0-42c8-b597-051e06fc58d7",
+   "metadata": {},
+   "source": [
+    "4: what is $ (0.125)^{- \\frac{2}{3}} $"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ccd498c6",
+   "id": "cd331b24-9aa9-44c7-b4b0-49559f232663",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 2166\t b = 6099\n",
-      "a = 6099\t b = 2166\n",
-      "a = 2166\t b = 1767\n",
-      "a = 1767\t b = 399\n",
-      "a = 399\t b = 171\n",
-      "a = 171\t b = 57\n",
-      "57\n"
+      "3.9999999999999996\n"
      ]
     }
    ],
    "source": [
-    "def gcd(a, b):\n",
-    "    print(f\"a = {a}\\t b = {b}\")\n",
-    "    if (a % b) == 0:\n",
-    "        return b\n",
-    "    return gcd(b, (a %b))\n",
-    "print (gcd(2166, 6099))"
+    "print(0.125**(-2/3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b31e8a3d-e866-464c-ba06-168f22178c6f",
+   "metadata": {},
+   "source": [
+    " or $ (0.125)^{- \\frac{2}{3}} = \\frac{1}{\\frac{1}{8}^\\frac{2}{3}}  = 8 ^\\frac{2}{3} = 2^2 =4$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46d21d3e",
+   "id": "d10f2391-35e0-47f0-984c-c90b5e4f626c",
    "metadata": {},
    "outputs": [],
    "source": []
