--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -38,8 +38,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "559e59c0-c5ca-4269-b5ed-a6905a142ca2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10=(1010)_(-2)\n",
+      "-9=(1011)_(-2)\n",
+      "-8=(1000)_(-2)\n",
+      "-7=(1001)_(-2)\n",
+      "-6=(1110)_(-2)\n",
+      "-5=(1111)_(-2)\n",
+      "-4=(1100)_(-2)\n",
+      "-3=(1101)_(-2)\n",
+      "-2=(10)_(-2)\n",
+      "-1=(11)_(-2)\n",
+      "0=(0)_(-2)\n",
+      "1=(1)_(-2)\n",
+      "2=(110)_(-2)\n",
+      "3=(111)_(-2)\n",
+      "4=(100)_(-2)\n",
+      "5=(101)_(-2)\n",
+      "6=(11010)_(-2)\n",
+      "7=(11011)_(-2)\n",
+      "8=(11000)_(-2)\n",
+      "9=(11001)_(-2)\n",
+      "10=(11110)_(-2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rad_neg_2(n:int)->str:\n",
+    "    if n == 0:\n",
+    "        return '0'\n",
+    "    if n == 1:\n",
+    "        return '1'\n",
+    "    if (n % 2) == 0:\n",
+    "        return f\"{rad_neg_2(-n/2)}0\"\n",
+    "    return f\"{rad_neg_2(-(n-1)/2)}1\"\n",
+    "\n",
+    "for i in range(-10,10+1):\n",
+    "    print (f\"{i}=({rad_neg_2(i)})_(-2)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0310af58-e7c7-4b87-b498-b69a95a1d231",
    "metadata": {},
    "outputs": [],
    "source": []
