add radix -2 addition

--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -86,8 +86,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0310af58-e7c7-4b87-b498-b69a95a1d231",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1+1\n",
+      "0+1\n",
+      "1+1\n",
+      "11000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_neg_2_base(a:str, b:str)->str:\n",
+    "    if len(a)<len(b):\n",
+    "        t = a\n",
+    "        a = b\n",
+    "        b = t\n",
+    "    b = '0'*(len(a)-len(b))+b\n",
+    "    n = len(a)\n",
+    "    i = n-1\n",
+    "    carry = 0\n",
+    "    c = \"\"\n",
+    "    while i>=0:\n",
+    "        a_dig = int(a[i])\n",
+    "        b_dig = int(b[i])\n",
+    "        c_dig = a_dig+b_dig-carry\n",
+    "        if c_dig == 2:\n",
+    "            c_dig = '0'\n",
+    "            carry = 1\n",
+    "        elif c_dig == -1:\n",
+    "            c_dig = '1'\n",
+    "            carry= -1\n",
+    "        else:\n",
+    "            c_dig = str(c_dig)\n",
+    "            carry = 0\n",
+    "        c = f\"{c_dig}{c}\"\n",
+    "        print (f\"{a_dig}+{b_dig}\")\n",
+    "        i = i-1\n",
+    "    if carry == 1:\n",
+    "        c = f\"11{c}\"\n",
+    "    elif carry == -1:\n",
+    "        c = f\"1{c}\"\n",
+    "    return c\n",
+    "print (add_neg_2_base(\"101\",\"111\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b43e3a-8de6-4959-bde1-86a6b1a50fe9",
    "metadata": {},
    "outputs": [],
    "source": []
