--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "559e59c0-c5ca-4269-b5ed-a6905a142ca2",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "0310af58-e7c7-4b87-b498-b69a95a1d231",
    "metadata": {},
    "outputs": [
@@ -94,9 +94,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1+1\n",
-      "0+1\n",
-      "1+1\n",
       "11000\n"
      ]
     }
@@ -126,7 +123,6 @@
     "            c_dig = str(c_dig)\n",
     "            carry = 0\n",
     "        c = f\"{c_dig}{c}\"\n",
-    "        print (f\"{a_dig}+{b_dig}\")\n",
     "        i = i-1\n",
     "    if carry == 1:\n",
     "        c = f\"11{c}\"\n",
@@ -137,9 +133,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c594616-2978-4adb-88ea-01203783ee28",
+   "metadata": {},
+   "source": [
+    "2. Consider the following 4 number systems, (a) binary (b) negabinary (c) balanced ternary and (d) radix b= $\\frac{1}{10}$, use each of these four number systems to express each of the following three numbers: <br>\n",
+    "    i) -49 <br>\n",
+    "    ii) $-3\\frac{1}{7}$ <br>\n",
+    "    iii) $\\pi$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "70150c5f-c8d0-4bc6-86d4-590a0c62edcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11010011'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rad_neg_2(-49)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "be280643-12f3-434e-8ed1-4abad2113c94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-0b110001'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(-49)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fcb28b1b-2fdb-4311-a5e0-429e9b3cadbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-49==-81+27+9-3-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e91cfb09-2d7e-49a1-bea5-68751353ec30",
+   "metadata": {},
+   "source": [
+    "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5b43e3a-8de6-4959-bde1-86a6b1a50fe9",
+   "id": "e392f9c2-9548-42d7-8e17-196eb54cca15",
    "metadata": {},
    "outputs": [],
    "source": []
