--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -144,74 +144,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "70150c5f-c8d0-4bc6-86d4-590a0c62edcf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'11010011'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rad_neg_2(-49)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "be280643-12f3-434e-8ed1-4abad2113c94",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'-0b110001'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bin(-49)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fcb28b1b-2fdb-4311-a5e0-429e9b3cadbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "-49==-81+27+9-3-1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e91cfb09-2d7e-49a1-bea5-68751353ec30",
    "metadata": {},
    "source": [
-    "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$"
+    "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
+    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}$  \n",
+    "\n",
+    "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)"
    ]
   },
   {
