--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -151,13 +151,55 @@
     "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
     "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}$  \n",
     "\n",
-    "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)"
+    "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)\n",
+    "\n",
+    "iii) $\\pi = 11.00100100001111110110_{2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0415de4c-1369-4c09-80ef-3ecc3bec1bce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.132741228718345"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "(math.pi-3)*8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6669997c-cea5-460c-be94-5b8c8a9eddf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b100100001111110110\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bin(148470))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e392f9c2-9548-42d7-8e17-196eb54cca15",
+   "id": "9b28e613-3153-4510-99b4-0049dda3fe01",
    "metadata": {},
    "outputs": [],
    "source": []
