--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -149,7 +149,7 @@
    "metadata": {},
    "source": [
     "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
-    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(1\\bar{1}1.\\dot{0}110\\bar{1}\\dot{\\bar{1}}$\n",
+    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(\\bar{1}0.\\dot{0}\\bar{1}\\bar{1}01\\dot{1})_{3}$\n",
     "\n",
     "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)\n",
     "\n",
