--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "559e59c0-c5ca-4269-b5ed-a6905a142ca2",
    "metadata": {},
    "outputs": [
@@ -72,13 +72,12 @@
    ],
    "source": [
     "def rad_neg_2(n:int)->str:\n",
-    "    if n == 0:\n",
-    "        return '0'\n",
-    "    if n == 1:\n",
-    "        return '1'\n",
-    "    if (n % 2) == 0:\n",
-    "        return f\"{rad_neg_2(-n/2)}0\"\n",
-    "    return f\"{rad_neg_2(-(n-1)/2)}1\"\n",
+    "    radix = -2\n",
+    "    if n in (0,1):\n",
+    "        return str(n)\n",
+    "    digit= abs(n % radix)\n",
+    "    next_n = (n - digit) // radix\n",
+    "    return f\"{rad_neg_2(next_n)}{digit}\"\n",
     "\n",
     "for i in range(-10,10+1):\n",
     "    print (f\"{i}=({rad_neg_2(i)})_(-2)\")"
@@ -148,34 +147,34 @@
    "id": "e91cfb09-2d7e-49a1-bea5-68751353ec30",
    "metadata": {},
    "source": [
-    "i) $49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
-    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(\\bar{1}0.\\dot{0}\\bar{1}\\bar{1}01\\dot{1})_{3}$\n",
+    "i) $-49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
+    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(\\bar{1}0.\\dot{0}\\bar{1}\\bar{1}01\\dot{1})_{3}=-(\\dot{7}5824\\bar{1}.3)_{\\frac{1}{10}}$\n",
     "\n",
     "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)\n",
     "\n",
-    "iii) $\\pi = 11.00100100001111110110_{2}$"
+    "iii) $\\pi = (11.00100100001111110110\\ldots)_{2} = (111.01100100010000001010\\ldots)_{-2}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0415de4c-1369-4c09-80ef-3ecc3bec1bce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.132741228718345"
+       "148470.6583305709"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import math\n",
-    "(math.pi-3)*8"
+    "(math.pi-3)*2**20"
    ]
   },
   {
@@ -198,8 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b28e613-3153-4510-99b4-0049dda3fe01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(rad_neg_2(148470)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ffbbb5b-2a97-4b36-b361-07eca62b0448",
    "metadata": {},
    "outputs": [],
    "source": []
