--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "559e59c0-c5ca-4269-b5ed-a6905a142ca2",
    "metadata": {},
    "outputs": [
@@ -71,16 +71,15 @@
     }
    ],
    "source": [
-    "def rad_neg_2(n:int)->str:\n",
-    "    radix = -2\n",
+    "def int_to_radix(n:int, radix:int)->str:\n",
     "    if n in (0,1):\n",
     "        return str(n)\n",
     "    digit= abs(n % radix)\n",
     "    next_n = (n - digit) // radix\n",
-    "    return f\"{rad_neg_2(next_n)}{digit}\"\n",
+    "    return f\"{int_to_radix(next_n, radix)}{digit}\"\n",
     "\n",
     "for i in range(-10,10+1):\n",
-    "    print (f\"{i}=({rad_neg_2(i)})_(-2)\")"
+    "    print (f\"{i}=({int_to_radix(i, -2)})_(-2)\")"
    ]
   },
   {
@@ -152,29 +151,30 @@
     "\n",
     "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)\n",
     "\n",
-    "iii) $\\pi = (11.00100100001111110110\\ldots)_{2} = (111.01100100010000001010\\ldots)_{-2}$"
+    "iii) $\\pi = (11.00100100001111110110\\ldots)_{2} = (111.01100100010000001010\\ldots)_{-2}= (10.011\\bar{1}111\\bar{1}00\\bar{1}011\\bar{1}1100\\ldots)_3\n",
+    "=(\\ldots5832397985356295141.3)_\\frac{1}{10}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "0415de4c-1369-4c09-80ef-3ecc3bec1bce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "148470.6583305709"
+       "493703055.83308727"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import math\n",
-    "(math.pi-3)*2**20"
+    "(math.pi-3)*3**20"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9b28e613-3153-4510-99b4-0049dda3fe01",
    "metadata": {},
    "outputs": [
@@ -205,18 +205,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19\n"
+      "1021101222201021100\n"
      ]
     }
    ],
    "source": [
-    "print(len(rad_neg_2(148470)))"
+    "print(int_to_radix(493703055,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4ffbbb5b-2a97-4b36-b361-07eca62b0448",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5832397985356295141\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=\"1415926535897932385\"\n",
+    "b=a[::-1]\n",
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffbbb5b-2a97-4b36-b361-07eca62b0448",
+   "id": "e4c8de29-fed5-4b19-ba29-4e1016935d00",
    "metadata": {},
    "outputs": [],
    "source": []
