--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "559e59c0-c5ca-4269-b5ed-a6905a142ca2",
    "metadata": {},
    "outputs": [
@@ -71,12 +71,21 @@
     }
    ],
    "source": [
+    "def digit_char(d:int) -> str:\n",
+    "    if (d<0):\n",
+    "        return f\"\\bar{digit_char(-d)}\"\n",
+    "    if (d<10):\n",
+    "        return str(d)\n",
+    "    return chr(ord('A')+(d-10));\n",
+    "    \n",
     "def int_to_radix(n:int, radix:int)->str:\n",
-    "    if n in (0,1):\n",
-    "        return str(n)\n",
-    "    digit= abs(n % radix)\n",
+    "    if n in range(abs(radix)):\n",
+    "        return digit_char(n)\n",
+    "    digit= n % radix\n",
+    "    if (digit < 0):\n",
+    "        digit = digit + abs(radix)\n",
     "    next_n = (n - digit) // radix\n",
-    "    return f\"{int_to_radix(next_n, radix)}{digit}\"\n",
+    "    return f\"{int_to_radix(next_n, radix)}{digit_char(digit)}\"\n",
     "\n",
     "for i in range(-10,10+1):\n",
     "    print (f\"{i}=({int_to_radix(i, -2)})_(-2)\")"
@@ -179,25 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6669997c-cea5-460c-be94-5b8c8a9eddf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0b100100001111110110\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(bin(148470))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "9b28e613-3153-4510-99b4-0049dda3fe01",
    "metadata": {},
    "outputs": [
@@ -212,34 +203,6 @@
    "source": [
     "print(int_to_radix(493703055,3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4ffbbb5b-2a97-4b36-b361-07eca62b0448",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5832397985356295141\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=\"1415926535897932385\"\n",
-    "b=a[::-1]\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4c8de29-fed5-4b19-ba29-4e1016935d00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
