--- a/v2/ch4/4.1/Exercise.ipynb
+++ b/v2/ch4/4.1/Exercise.ipynb
@@ -155,13 +155,13 @@
    "id": "e91cfb09-2d7e-49a1-bea5-68751353ec30",
    "metadata": {},
    "source": [
-    "i) $-49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(0.94)_{\\frac{1}{10}}$ <br>\n",
-    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(\\bar{1}0.\\dot{0}\\bar{1}\\bar{1}01\\dot{1})_{3}=-(\\dot{7}5824\\bar{1}.3)_{\\frac{1}{10}}$\n",
+    "i) $-49=(-110001)_{2}=(11010011)_{-2}=(\\bar{1}11\\bar{1}\\bar{1})_{3}=-(9.4)_{\\frac{1}{10}}$ <br>\n",
+    "ii) $-3\\frac{1}{7}=(-11.\\dot{0}0\\dot{1})_{2}=(1101.\\dot{0}1100\\dot{1})_{-2}=(\\bar{1}0.\\dot{0}\\bar{1}\\bar{1}01\\dot{1})_{3}=-(\\dot{7}5824\\dot{1}3)_{\\frac{1}{10}}$\n",
     "\n",
     "(because $-\\frac{1}{7} \\cdot 64 = -(9+\\frac{1}{7})$, so move the dot to the right for 6 positions keeps the part after the point the same but generate a -9 before the dot)\n",
     "\n",
     "iii) $\\pi = (11.00100100001111110110\\ldots)_{2} = (111.01100100010000001010\\ldots)_{-2}= (10.011\\bar{1}111\\bar{1}00\\bar{1}011\\bar{1}1100\\ldots)_3\n",
-    "=(\\ldots5832397985356295141.3)_\\frac{1}{10}$"
+    "=(\\ldots58323979853562951413)_\\frac{1}{10}$"
    ]
   },
   {
