dice all solutions

--- a/v7/dice.ipynb
+++ b/v7/dice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "1b57a19c",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5833333333333334\n",
       "True\n",
-      "0.5833333333333334\n",
       "True\n",
-      "0.5833333333333334\n",
       "True\n"
      ]
     }
@@ -26,17 +23,119 @@
     "        for j in die2:\n",
     "            if i > j:\n",
     "                greater += 1\n",
-    "    print(greater / (len(die1) * len(die2)))\n",
-    "    return (greater / (len(die1) * len(die2)) > threshold)\n",
+    "    if (greater / (len(die1) * len(die2)) > threshold):\n",
+    "        #print(greater / (len(die1) * len(die2)))\n",
+    "        return True\n",
     "    \n",
     "\n",
-    "die1 = [2, 5, 5, 5, 5, 5]\n",
-    "die2 = [1, 4, 4, 4, 7, 7]\n",
-    "die3 = [3, 3, 3, 6, 6, 6]\n",
-    "print(compare(die1, die2))\n",
-    "print(compare(die2, die3))\n",
-    "print(compare(die3, die1))\n"
+    "die3 = [2, 5, 5, 5, 5, 5]\n",
+    "die1 = [1, 4, 4, 4, 7, 7]\n",
+    "die2 = [3, 3, 3, 6, 6, 6]\n",
+    "print(compare(die1, die2, 5/9.0))\n",
+    "print(compare(die2, die3, 5/9))\n",
+    "print(compare(die3, die1, 5/9))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f327adb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "462\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_dice = []\n",
+    "\n",
+    "fist_die  = [1,1,1,1,1,1]\n",
+    "all_dice.append(fist_die)\n",
+    "\n",
+    "def next_die(die):\n",
+    "    new_die = die.copy()\n",
+    "    index_to_increase = 5\n",
+    "    while True:\n",
+    "        new_die[index_to_increase] += 1\n",
+    "        if new_die[index_to_increase] < 7:\n",
+    "            for i in range(index_to_increase + 1, 6):\n",
+    "                new_die[i] = new_die[index_to_increase]\n",
+    "            return new_die\n",
+    "        else:\n",
+    "            index_to_increase -= 1\n",
+    "        if index_to_increase < 0:\n",
+    "            return None\n",
+    "\n",
+    "last_die = fist_die\n",
+    "while True:\n",
+    "    last_die = next_die(last_die)\n",
+    "    if last_die is None:\n",
+    "        break\n",
+    "    all_dice.append(last_die)\n",
+    "\n",
+    "print(len(all_dice))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4fad4a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nontransitive pair found:\n",
+      "[1, 4, 4, 4, 4, 4]\n",
+      "[3, 3, 3, 3, 3, 6]\n",
+      "[2, 2, 2, 5, 5, 5]\n",
+      "Nontransitive pair found:\n",
+      "[2, 2, 2, 5, 5, 5]\n",
+      "[1, 4, 4, 4, 4, 4]\n",
+      "[3, 3, 3, 3, 3, 6]\n",
+      "Nontransitive pair found:\n",
+      "[3, 3, 3, 3, 3, 6]\n",
+      "[2, 2, 2, 5, 5, 5]\n",
+      "[1, 4, 4, 4, 4, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(all_dice[461])\n",
+    "threshold = 5/9.0\n",
+    "total =  len(all_dice)\n",
+    "for i in range(total):\n",
+    "    die1 = all_dice[i]\n",
+    "    for j in range(total):\n",
+    "        if j == i:\n",
+    "            continue\n",
+    "        die2 = all_dice[j]\n",
+    "        if not compare(die1, die2, threshold):\n",
+    "            continue\n",
+    "        for k in range(total):\n",
+    "            if k == i or k == j:\n",
+    "                continue\n",
+    "            die3 = all_dice[k]\n",
+    "            if compare(die2, die3, threshold) and compare(die3, die1, threshold):\n",
+    "                print(\"Nontransitive pair found:\")\n",
+    "                print(all_dice[i])\n",
+    "                print(all_dice[j])\n",
+    "                print(all_dice[k])\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4244fe33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
